--- a/clients/otomo/package.json
+++ b/clients/otomo/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@eva-design/eva": "^1.3.2",
+    "@react-native-community/async-storage": "^1.7.1",
     "@react-native-community/masked-view": "^0.1.6",
     "@ui-kitten/components": "^4.3.2",
     "@ui-kitten/template-js": "^4.4.0-beta.3",
